EMCRI-566 Adding validation for Job Title,Cell Phone for the primary contact

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -134,7 +134,7 @@
         <!--&& ((formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length > 0)-->
         <div class="col-md-6" *ngIf="!isSubmitted
            && (formCreationService.applicationDetailsForm$ | async)?.valid
-           
+           && (formCreationService.contactsForm$ | async)?.valid
            ">
         <!--<div class="col-md-6">-->
         <button
