--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -66,10 +66,28 @@
           </p>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
-              <input matInput formControlName="primaryContactSearch" id="primaryContactSearch"
-                placeholder="User Id" maxlength="16" />
+              <input matInput formControlName="primaryContactSearch" id="primaryContactSearch" required placeholder="User Id"
+                maxlength="20" />
+              <mat-hint>Maximum length is 20 characters</mat-hint>
+              <mat-error
+              *ngIf="
+                contactsForm.get('primaryContactSearch').invalid &&
+                contactsForm.get('primaryContactSearch').hasError('required') &&
+                contactsForm.get('primaryContactSearch').touched
+              "
+            >
+              Primary Contact is required</mat-error
+            >
+            <mat-error
+              *ngIf="
+                contactsForm.get('primaryContactSearch').invalid &&
+                contactsForm.get('primaryContactSearch').hasError('maxLength')
+              "
+            >
+              Maximum length is 16 characters</mat-error
+            >
             </mat-form-field>
-          </div>
+            </div>
           <div class="col-md-2">
             <button class="button-p save-button" mat-stroked-button type="button" (click)="searchForContact()">
               Search for Contact
@@ -153,15 +171,38 @@
               Cell Phone
             </p>
             <mat-form-field appearance="outline">
-              <input formControlName="pcCellPhone" matInput maxlength="100" />
+              <input type="text" formControlName="pcCellPhone" matInput maxlength="100" required 
+                mask="(000) 000-0000" />
+              <mat-error *ngIf="
+                contactsForm.get('pcCellPhone').invalid &&
+                contactsForm.get('pcCellPhone').hasError('incorrectLength')
+              ">
+                Telephone number must have 10 digits</mat-error>
+              <mat-error *ngIf="
+                contactsForm.get('pcCellPhone').invalid &&
+                contactsForm.get('pcCellPhone').hasError('required') &&
+                contactsForm.get('pcCellPhone').touched
+              ">
+                Cell Phone number is required</mat-error>
             </mat-form-field>
-          </div>
+            </div>
           <div class="col-md-4">
             <p>
               Job Title
             </p>
             <mat-form-field appearance="outline">
-              <input formControlName="pcJobTitle" matInput maxlength="100" />
+              <input formControlName="pcJobTitle" matInput maxlength="100" required />
+              <mat-error *ngIf="
+              contactsForm.get('pcJobTitle').invalid &&
+              contactsForm.get('pcJobTitle').hasError('maxLength')
+            ">
+              Maximum length is 100 characters</mat-error>
+            <mat-error *ngIf="
+              contactsForm.get('pcJobTitle').invalid &&
+              contactsForm.get('pcJobTitle').hasError('required') &&
+              contactsForm.get('pcJobTitle').touched
+            ">
+              Job Title is required</mat-error>
             </mat-form-field>
           </div>
         </div>
