DEVOPS# 1 DFA Document upload issue between portal and dynamics - Addfunctionality to hide the upload section after uplaoding the documents - Fixed the logic to show the add documents button after hiding the document section

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -482,6 +482,7 @@
             (saveFileUpload)="saveSupportingFiles($event)"
             (cancelFileUpload)="cancelSupportingFiles()"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('supportingFilesFileUpload')"
+            [showFileUpload]="showFileUpload.other"
           ></app-dfa-attachment>
           <app-loader
             class="spinner"
