--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -109,7 +109,7 @@
 
         <div class="row">
           <p class="sub-heading" style="font-size: 15px">
-            Primary Contact Details
+            Primary Contact Details<span style="color:red">*</span>
           </p>
         </div>
         <div class="row">
@@ -168,7 +168,7 @@
         <div class="row">
           <div class="col-md-4">
             <p>
-              Cell Phone
+              Cell Phone*
             </p>
             <mat-form-field appearance="outline">
               <input type="text" formControlName="pcCellPhone" matInput maxlength="100" required 
@@ -188,7 +188,7 @@
             </div>
           <div class="col-md-4">
             <p>
-              Job Title
+              Job Title*
             </p>
             <mat-form-field appearance="outline">
               <input formControlName="pcJobTitle" matInput maxlength="100" required />
