--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -363,9 +363,9 @@
                 <br /><br/>
               </div>
 
-              <!--<div *ngIf="otherContactsForm.get('otherContacts').invalid && otherContactsForm.get('otherContacts').hasError('required')">
+              <div *ngIf="otherContactsForm.get('otherContacts').invalid && otherContactsForm.get('otherContacts').hasError('required')">
                 <span style="color:red">At least one other contact is required.</span>
-              </div>-->
+              </div>
 
               <button
                 *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly'"
@@ -433,6 +433,7 @@
                         matInput
                         required
                         placeholder="Business Phone"
+                        mask="(000) 000-0000"
                       />
                         <mat-error
                         *ngIf="
@@ -441,7 +442,7 @@
                           otherContactsForm.get('otherContact').controls.phoneNumber.touched
                         "
                       >
-                       Telephone number is required</mat-error
+                       Business Phone is required</mat-error
                       >
                       <mat-error
                         *ngIf="
@@ -449,7 +450,7 @@
                           otherContactsForm.get('otherContact').controls.phoneNumber.hasError('incorrectLength')
                         "
                       >
-                        Telephone number must have 10 digits</mat-error
+                        Business Phone must have 10 digits</mat-error
                       >
                     </mat-form-field>
                   </div>
@@ -491,24 +492,41 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Cell Phone</mat-label>
                       <!-- 2024-08-01 EMCRI-216 waynezen; upgrade to Angular 18 - use new ngx-mask -->
-                      <input formControlName="cellPhone"
-                        matInput
-                        placeholder="Cell Phone"
-                      />
-                      <mat-error
-                        *ngIf="
-                          otherContactsForm.get('otherContact').controls.cellPhone.invalid &&
-                          otherContactsForm.get('otherContact').controls.cellPhone.hasError('incorrectLength')
-                        "
-                      >
-                        Telephone number must have 10 digits</mat-error
-                      >
+                      <input formControlName="cellPhone" matInput placeholder="Cell Phone" mask="(000) 000-0000" />
+                      <mat-error *ngIf="
+                        otherContactsForm.get('otherContact').controls.cellPhone.invalid &&
+                        otherContactsForm.get('otherContact').controls.cellPhone.hasError('required') &&
+                        otherContactsForm.get('otherContact').controls.cellPhone.touched
+                      ">
+                        Cell Phone is required</mat-error>
+                      <mat-error *ngIf="
+                        otherContactsForm.get('otherContact').controls.cellPhone.invalid &&
+                        otherContactsForm.get('otherContact').controls.cellPhone.hasError('incorrectLength')
+                      ">
+                        Cell Phone must have 10 digits</mat-error>
                     </mat-form-field>
                   </div>
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Job Title</mat-label>
-                      <input formControlName="jobTitle" matInput placeholder="Job Title" maxlength="49"/>
+                      <input formControlName="jobTitle" matInput placeholder="Job Title" maxlength="100"/>
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.jobTitle.invalid &&
+                          otherContactsForm.get('otherContact').controls.jobTitle.hasError('required') &&
+                          otherContactsForm.get('otherContact').controls.jobTitle.touched
+                        "
+                      >
+                        Job Title is required</mat-error
+                      >
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.jobTitle.invalid &&
+                          otherContactsForm.get('otherContact').controls.jobTitle.hasError('maxLength')
+                        "
+                      >
+                        Maximum length is 100 characters</mat-error
+                      >
                     </mat-form-field>
                   </div>
                 </div>
