--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.html
@@ -43,7 +43,22 @@
     
   </div>
   <div class="row filterStage">
-  
+  <div class="col-md-2">
+  <mat-select *ngIf="vieworedit == 'viewOnly' || vieworedit == 'view'" placeholder="Filter by status" class="boxborder" [(value)]="stageSelected" (selectionChange)="ApplyFilter(2,null)">
+    <mat-option value="-1">
+      All Invoices
+    </mat-option>
+    <mat-option value="Approved Total">
+      Approved Total
+    </mat-option>
+    <mat-option value="Approved Partial">
+      Approved Partial
+    </mat-option>
+    <mat-option value="Denied">
+      Denied
+    </mat-option>
+  </mat-select>
+</div>
 
   <div class="col-md-2">
     <mat-select placeholder="Filter by days" class="boxborder" [(value)]="filterbydaysSelected" (selectionChange)="ApplyFilter(2,null)">
@@ -68,7 +83,7 @@
     </mat-select>
   </div>
 
-  <div class="col-md-5">
+  <div class="col-md-3">
   </div>
 
   <div class="col-md-2 ">
