--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
@@ -97,6 +97,10 @@ table {
   justify-content: flex-end;
 }
 
+.custom-mat-error {
+  display: block;
+  //padding-top: 3px;
+}
 
 .delete-image img:last-child {
   display: none;
