--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
@@ -11,6 +11,13 @@
     font-size: 30px;
 }
 
+.spinner {
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+}
+
 .setViewIcon {
   color: #003366;
   cursor: pointer;
