EMCRI-687 fixing test issues

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
@@ -250,7 +250,7 @@
                   id="currencyBoxestimatedAdditionalProjectCost"
                   formControlName="estimatedAdditionalProjectCost"
                   matInput
-                       mask="separator.2"
+                  mask="separator.2" thousandSeparator="" decimalMarker="."
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
@@ -280,7 +280,7 @@
                   id="currencyBoxapprovedAdditionalProjectCost"
                   formControlName="approvedAdditionalProjectCost"
                   matInput
-                       mask="separator.2"
+                  mask="separator.2" thousandSeparator="" decimalMarker="."
                   maxlength="100"/>
                 <span class="currencyText">CA$</span>
               </div>
