[EMCRI-809] Contact screen editing in Submitted status fully working

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -490,7 +490,7 @@
                   <td class="contact-title">First Name</td>
                   <td class="contact-title">Last Name</td>
                   <!-- <td class="contact-title">Business Phone</td> -->
-                  <td class="contact-title">Cell Phone</td>
+                  <td class="contact-title">Phone</td>
                   <td class="contact-title">Email</td>
                   <td class="contact-title">Cell Phone</td>
                   <td class="contact-title">Job Title</td>
@@ -502,7 +502,7 @@
                   <td>{{contact.lastName}}</td>
                   <td>{{contact.phoneNumber}}</td>
                   <td>{{contact.email}}</td>
-                  <td>{{contact.cellPhone}</td>
+                  <td>{{contact.cellPhone}}</td>
                   <td>{{contact.jobTitle}}</td>
                 </tr>
               </tbody>
