--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.html
@@ -10,7 +10,7 @@
         #backtodash
         id="backtodash"
         class="button-p nextNsave col-4"
-        style="height: 40px !important; vertical-align: middle; width: 220px; margin-top: 15px"
+        style="vertical-align: middle; width: 220px; margin-top: 15px"
         (click)="BackToDashboard()"
         mat-stroked-button
         type="button"
@@ -25,7 +25,7 @@
     <div class="col-4" *ngIf="vieworedit === 'view' || vieworedit === 'edit' || vieworedit === 'viewOnly'" >
       <button
         class="button-p nextNsave col-4"
-        style="height:40px !important; vertical-align: middle; width:220px;"
+        style="vertical-align: middle; width:220px;"
         (click)="BackToDashboard()"
         mat-stroked-button
         type="button"
