--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-main/dfa-project-main.component.scss
@@ -10,7 +10,7 @@
 }
 
 .nextNsave {
-  height: 40px !important;
+  /*height: 40px !important;*/
   vertical-align: middle;
   font-weight: bold;
   margin: 5px;
