EMCRI-566 - Adding new fields to the PDF

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -411,17 +411,20 @@
               <tr style="background-color: #415a88;color: #fff;">
                        <td class="contact-title">First Name</td>
                        <td class="contact-title">Last Name</td>
-                       <!-- <td class="contact-title">Business Phone</td> -->
-                       <td class="contact-title">Cell Phone</td>
+                       <td class="contact-title">Phone</td>
                        <td class="contact-title">Email</td>
+                       <td class="contact-title">Cell Phone</td>
+                       <td class="contact-title">Job Title</td>
                       </tr>
             </thead>
             <tbody>
             <tr *ngFor="let contact of otherContactsData">
                       <td>{{contact.firstName}}</td>
                       <td>{{contact.lastName}}</td>
-                      <td>{{contact.phoneNumber}}</td>   
+                      <td>{{contact.businessNumber}}</td>   
                       <td>{{contact.email}}</td>
+                      <td>{{contact.cellPhone}}</td>
+                      <td>{{contact.jobTitle}}</td>
              </tr>
         </tbody>
         </table>
